Add Swipe action

--- a/XamariniOSTableView/XamariniOSTableView.csproj
+++ b/XamariniOSTableView/XamariniOSTableView.csproj
@@ -106,6 +106,7 @@
       <DependentUpon>ViewController.cs</DependentUpon>
     </Compile>
     <Compile Include="TableSource.cs" />
+    <Compile Include="TableDelegate.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\iOS\Xamarin.iOS.CSharp.targets" />
 </Project>
